feat: add console user statistics
