# apps/comment-service/openapi.json
@@ -770,6 +770,60 @@
           "ConsoleReports"
         ]
       }
+    },
+    "/v1/console/users": {
+      "get": {
+        "operationId": "ConsoleUsersController_list",
+        "parameters": [
+          {
+            "name": "x-application-key",
+            "required": true,
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "ConsoleUsers"
+        ]
+      }
+    },
+    "/v1/console/users/{memberId}/stats": {
+      "get": {
+        "operationId": "ConsoleUsersController_stats",
+        "parameters": [
+          {
+            "name": "x-application-key",
+            "required": true,
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "memberId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "ConsoleUsers"
+        ]
+      }
     }
   },
   "info": {
